change about me

--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
-title: Archive
+title: 文章分类
 layout: default
-description: keep hungry keep foolish
+description: 思想就是武器，情绪即是文字
 header-img: "img/tag-bg.jpg"
 ---
 
